--- a/favorite-things.html
+++ b/favorite-things.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Dan and Eric's favs !</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>My Favorite Things</h1>
